# tree-sitter-dcf

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  REUSE.toml  binding.gyp  eslint.config.mjs  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  setup.py  tree-sitter.json
.github/workflows/: ci.yaml
bindings/c/: tree-sitter-dcf.h  tree-sitter-dcf.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_dcf/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDCF/: dcf.h
bindings/swift/TreeSitterDCFTests/: TreeSitterDCFTests.swift
examples/: folded-values.dcf  mixed-values.dcf  simple-values.dcf
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
src/tree_sitter/: alloc.h  array.h  parser.h
